--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Tailwebs Dashboard{% endblock %}</title>
     <link rel="icon" href="{% static 'images/company_logo.jpg' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,600,1,200&icon_names=arrow_circle_down" />
 </head>
 <body>
     <div class="navbar">
